[workspace]
resolver = "2"

members = [
    "node",
    "runtime",
]

[workspace.package]
authors = ["Orion Contributors"]
edition = "2021"
repository = "https://github.com/Jayc82/Orion"
license = "Apache-2.0"

[workspace.dependencies]
# Substrate primitives
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

sp-api = { version = "26.0.0", default-features = false }
sp-block-builder = { version = "26.0.0", default-features = false }
sp-consensus-aura = { version = "0.32.0", default-features = false }
sp-consensus-grandpa = { version = "13.0.0", default-features = false }
sp-core = { version = "28.0.0", default-features = false }
sp-inherents = { version = "26.0.0", default-features = false }
sp-io = { version = "30.0.0", default-features = false }
sp-offchain = { version = "26.0.0", default-features = false }
sp-runtime = { version = "31.0.1", default-features = false }
sp-session = { version = "27.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-transaction-pool = { version = "26.0.0", default-features = false }
sp-version = { version = "29.0.0", default-features = false }

# Substrate FRAME
frame-benchmarking = { version = "28.0.0", default-features = false }
frame-executive = { version = "28.0.0", default-features = false }
frame-support = { version = "28.0.0", default-features = false }
frame-system = { version = "28.0.0", default-features = false }
frame-system-benchmarking = { version = "28.0.0", default-features = false }
frame-system-rpc-runtime-api = { version = "26.0.0", default-features = false }
frame-try-runtime = { version = "0.34.0", default-features = false }

# Substrate Pallets
pallet-aura = { version = "27.0.0", default-features = false }
pallet-balances = { version = "28.0.0", default-features = false }
pallet-grandpa = { version = "28.0.0", default-features = false }
pallet-sudo = { version = "28.0.0", default-features = false }
pallet-timestamp = { version = "27.0.0", default-features = false }
pallet-transaction-payment = { version = "28.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "28.0.0", default-features = false }

# Frontier/EVM pallets
fp-evm = { version = "3.0.0-dev", git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.7.0", default-features = false }
fp-rpc = { version = "3.0.0-dev", git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.7.0", default-features = false }
fp-self-contained = { version = "1.0.0-dev", git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.7.0", default-features = false }
pallet-base-fee = { version = "1.0.0", git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.7.0", default-features = false }
pallet-ethereum = { version = "4.0.0-dev", git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.7.0", default-features = false }
pallet-evm = { version = "6.0.0-dev", git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.7.0", default-features = false }
pallet-evm-chain-id = { version = "1.0.0-dev", git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.7.0", default-features = false }
pallet-evm-precompile-modexp = { version = "2.0.0-dev", git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.7.0", default-features = false }
pallet-evm-precompile-sha3fips = { version = "2.0.0-dev", git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.7.0", default-features = false }
pallet-evm-precompile-simple = { version = "2.0.0-dev", git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.7.0", default-features = false }

# Node dependencies
clap = { version = "4.5.1" }
futures = { version = "0.3.30" }
jsonrpsee = { version = "0.22" }
log = { version = "0.4.21" }

sc-basic-authorship = { version = "0.34.0" }
sc-cli = { version = "0.36.0" }
sc-client-api = { version = "28.0.0" }
sc-consensus = { version = "0.33.0" }
sc-consensus-aura = { version = "0.34.0" }
sc-consensus-grandpa = { version = "0.19.0" }
sc-executor = { version = "0.32.0" }
sc-network = { version = "0.34.0" }
sc-offchain = { version = "29.0.0" }
sc-rpc = { version = "29.0.0" }
sc-rpc-api = { version = "0.33.0" }
sc-service = { version = "0.35.0" }
sc-telemetry = { version = "15.0.0" }
sc-transaction-pool = { version = "28.0.0" }
sc-transaction-pool-api = { version = "28.0.0" }

substrate-frame-rpc-system = { version = "28.0.0" }
substrate-build-script-utils = { version = "11.0.0" }
substrate-wasm-builder = { version = "17.0.0" }

# Frontier RPC
fc-consensus = { version = "2.0.0-dev", git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.7.0" }
fc-db = { version = "2.0.0-dev", git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.7.0" }
fc-mapping-sync = { version = "2.0.0-dev", git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.7.0" }
fc-rpc = { version = "2.0.0-dev", git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.7.0" }
fc-rpc-core = { version = "1.1.0-dev", git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.7.0" }
fc-storage = { version = "1.0.0-dev", git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.7.0" }

pallet-transaction-payment-rpc = { version = "30.0.0" }

[profile.release]
panic = "unwind"
